--- a/config/database.yml
+++ b/config/database.yml
@@ -9,26 +9,26 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   reconnect: false
-  database: aco_dh_development
+  database: sample_development
   pool: 5
-  username: aco_dh
-  password: VtvWh8UH4GwPvZ55
+  username: sample_user
+  password: koko
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   reconnect: false
-  database: aco_dh_test
+  database: sample_test
   pool: 5
-  username: aco_dh
-  password: VtvWh8UH4GwPvZ55
+  username: sample_user
+  password: koko
   host: localhost
 
 production:
